--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="훈민궁 - 프로필 링크" />
         <meta property="og:description" content="수제 생 양갱 훈민궁입니다." />
-        <meta property="og:image" content="훈민궁.png" />
+        <meta property="og:image" content="일러스트.png" />
         <title>훈민궁 - 프로필 링크</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
