--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 background-image: url('프로필.png')
             }
             .main{
-                color:white;
+                color:black;
                 font-size: 20px;
                 margin-top: 30px;
                 margin-bottom: 10px;
 
             }
-            .sub{color:white;
+            .sub{color:black;
                 font-size: 14px;
                 margin-top: 0;
                 margin-bottom: 30px;
@@ -56,6 +56,7 @@
 
                 background-color: white;
                 border-radius: 8px;
+                border: 2px solid black;
 
                 margin-bottom: 10px;
 
@@ -69,13 +70,12 @@
                 align-items: center;    
                 
                 text-decoration: none;
-                box-shadow: 3px 3px 5px 0px black;
+                
 
             }
             .wrap > a:hover {
-                background-color: #f2f2f2;
-                font-size: 20px;
-
+                background-color: darkorange;
+                border: 2px solid black;
             }
         </style>
     </head>
