--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
 
             }
             .wrap > a:hover {
-                background-color: darkorange;
+                background-color: black;
                 border: 2px solid black;
+                font-size: 16px;
+                color: white;
+
             }
         </style>
     </head>
