--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
             <div class="profile"></div>
             <h1 class="main">훈민궁</h1>
             <p class="sub">수제 생 양갱</p>
-            <a target="_blank" href="https://spartacodingclub.kr/">훈민궁 홈페이지</a>
-            <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">인스타그램</a>
-            <a target="_blank" href="https://chang.spartacodingclub.kr/">네이버 스토어팜</a>
-            <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">구입 및 안내사항</a>
+            <a target="_blank" href="https://blog.naver.com/hst568/">훈민궁 홈페이지</a>
+            <a target="_blank" href="https://instagram.com/hunmin_gung?igshid=YWJhMjlhZTc=/">인스타그램</a>
+            <a target="_blank" href="https://naver.com/">네이버 스토어팜</a>
+            <a target="_blank" href="https://blog.naver.com/hst568/">구입 및 안내사항</a>
 
         </div>
         
