--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">훈민궁</h1>
-            <p class="sub">수제 생 양갱</p>
+            <h1 class="main">훈 민 궁</h1>
+            <p class="sub">無방부제, 無첨가물의 수제 生(생) 양갱입니다.</p>
             <a target="_blank" href="https://blog.naver.com/hst568/">훈민궁 홈페이지</a>
             <a target="_blank" href="https://naver.com/">네이버 스토어팜</a>
             <a target="_blank" href="https://instagram.com/hunmin_gung?igshid=YWJhMjlhZTc=/">인스타그램</a>
