--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">훈 민 궁</h1>
-            <p class="sub">無방부제, 無첨가물의 수제 生(생) 양갱입니다.</p>
-            <a target="_blank" href="https://blog.naver.com/hst568/">훈민궁 홈페이지</a>
-            <a target="_blank" href="https://naver.com/">네이버 스토어팜</a>
-            <a target="_blank" href="https://instagram.com/hunmin_gung?igshid=YWJhMjlhZTc=/">인스타그램</a>
-            <a target="_blank" href="https://blog.naver.com/hst568/">구입 및 안내사항</a>
+            <h1 class="main">훈민궁</h1>
+            <p class="sub">수제 생 양갱</p>
+            <a target="_blank" href="https://hunmingung.cafe24.com/">훈민궁 홈페이지</a>
+            <a target="_blank" href="https://smartstore.naver.com/hunmingung/category/ALL?cp=1/">네이버 스토어팜</a>
+            <a target="_blank" href="https://instagram.com/hunmingung?igshid=YWJhMjlhZTc=/">인스타그램</a>
+            <a target="_blank" href="http://pf.kakao.com/_tlxhaxj/">카카오톡 1:1 문의</a>
 
         </div>
         
