--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="훈민궁 - 프로필 링크" />
-        <meta property="og:description" content="수제 생 양갱 훈민궁입니다." />
+        <meta property="og:description" content="수제생양갱훈민궁" />
         <meta property="og:image" content="일러스트.png" />
         <title>훈민궁 - 프로필 링크</title>
         <style>
@@ -90,7 +90,7 @@
             <a target="_blank" href="https://hunmingung.cafe24.com/">훈민궁 홈페이지</a>
             <a target="_blank" href="https://smartstore.naver.com/hunmingung/category/ALL?cp=1/">네이버 스토어팜</a>
             <a target="_blank" href="https://instagram.com/hunmingung?igshid=YWJhMjlhZTc=/">인스타그램</a>
-            <a target="_blank" href="http://pf.kakao.com/_tlxhaxj/">카카오톡 1:1 문의</a>
+            <a target="_blank" href="https://pf.kakao.com/_tlxhaxj/">카카오톡 1:1 문의</a>
 
         </div>
         
