--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="훈민궁 - 프로필 링크" />
-        <meta property="og:description" content="수제 생 양갱 훈민궁입니다." />
+        <meta property="og:description" content="수제생양갱 훈민궁입니다.">
         <meta property="og:image" content="일러스트.png" />
         <title>훈민궁 - 프로필 링크</title>
         <style>
@@ -26,7 +26,7 @@
 
                 background-position: center;
                 background-size: cover;
-                background-image: url('프로필.png')
+                background-image: url('프로필1.png')
             }
             .main{
                 color:black;
