--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
                 width: 100px;
                 height: 100px;
 
+                border: 3px solid black;
+
                 background-position: center;
                 background-size: cover;
-                background-image: url('프로필1.jpg')
+                background-image: url('프로필.png')
             }
             .main{
                 color:black;
-                font-size: 20px;
+                font-size: 25px;
                 margin-top: 30px;
                 margin-bottom: 10px;
 
@@ -84,7 +86,7 @@
         <div class="wrap">
             <div class="profile"></div>
             <h1 class="main">훈민궁</h1>
-            <p class="sub">수제 생 양갱</p>
+            <p class="sub">수제 생 양갱, 일월오봉도 선물 패키지.</p>
             <a target="_blank" href="https://hunmingung.cafe24.com/">훈민궁 홈페이지</a>
             <a target="_blank" href="https://smartstore.naver.com/hunmingung/category/ALL?cp=1/">네이버 스토어팜</a>
             <a target="_blank" href="https://instagram.com/hunmingung?igshid=YWJhMjlhZTc=/">인스타그램</a>
