--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="훈민궁 - 프로필 링크" />
-        <meta property="og:description" content="직접 만드는 생양갱, 훈민궁입니다.">
+        <meta property="og:description" content="고급 생 양갱을 일월오봉도에 담아, 전통의美를 전합니다.">
         <meta property="og:image" content="일러스트.png" />
         <title>훈민궁 - 프로필 링크</title>
         <style>
@@ -88,7 +88,7 @@
             <h1 class="main">훈민궁</h1>
             <p class="sub">수제 생 양갱, 일월오봉도 선물 패키지.</p>
             <a target="_blank" href="https://hunmingung.cafe24.com/">훈민궁 홈페이지</a>
-            <a target="_blank" href="https://smartstore.naver.com/hunmingung/category/ALL?cp=1/">네이버 스토어팜</a>
+            <a target="_blank" href="https://smartstore.naver.com/hunmingung/category/ALL?cp=1/">네이버 스마트스토어</a>
             <a target="_blank" href="https://instagram.com/hunmingung?igshid=YWJhMjlhZTc=/">인스타그램</a>
             <a target="_blank" href="https://pf.kakao.com/_tlxhaxj">카카오톡 1:1 문의</a>
 
