--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h1 class="main">훈민궁</h1>
             <p class="sub">수제 생 양갱, 일월오봉도 선물 패키지.</p>
             <a target="_blank" href="https://hunmingung.cafe24.com/">훈민궁 홈페이지</a>
-            <a target="_blank" href="https://smartstore.naver.com/hunmingung/category/ALL?cp=1/">네이버 스마트스토어</a>
+            <a target="_blank" href="https://smartstore.naver.com/hunmingung/">네이버 스마트스토어</a>
             <a target="_blank" href="https://instagram.com/hunmingung?igshid=YWJhMjlhZTc=/">인스타그램</a>
             <a target="_blank" href="https://pf.kakao.com/_tlxhaxj">카카오톡 1:1 문의</a>
 
