--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="wrap">
             <div class="profile"></div>
             <h1 class="main">훈민궁 ✣ 訓民宮</h1>
-            <p class="sub">고급 생 양갱을 일월오봉도에 담아, 전통의美를 전합니다.</p>
+            <p class="sub">고급 생 양갱과 전통의 美를 담아, 마음을 전합니다.</p>
             <a target="_blank" href="https://hunmingung.cafe24.com/">훈민궁 홈페이지</a>
             <a target="_blank" href="https://smartstore.naver.com/hunmingung/">네이버 스마트스토어</a>
             <a target="_blank" href="https://instagram.com/hunmingung?igshid=YWJhMjlhZTc=/">인스타그램</a>
